--- a/ruins-next/styles/globals.css
+++ b/ruins-next/styles/globals.css
@@ -28,42 +28,9 @@ body {
   box-sizing: border-box;
 }
 
-/* .font-10 {
-  font-size: 10px;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+  transition: all 0s 50000s; 
 }
-
-.font-11 {
-  font-size: 11px;
-}
-
-.font-13 {
-  font-size: 13px;
-}
-
-.font-14 {
-  font-size: 14px;
-}
-
-.font-15 {
-  font-size: 15px;
-}
-
-.font-24 {
-  font-size: 24px;
-}
-
-.fw-500 {
-  font-weight: 500;
-}
-
-.fw-600 {
-  font-weight: 600;
-}
-
-.gap-13 {
-  gap: 13px;
-}
-
-.gap-18 {
-  gap: 18px;
-} */
