--- a/ruins-next/styles/streaming.module.css
+++ b/ruins-next/styles/streaming.module.css
@@ -17,7 +17,8 @@
   align-items: center;
   justify-content: center;
   transition: 0.5s ease-in-out;
-  margin-top: 30px
+  margin-top: 30px;
+  /* flex-shrink: 0; */
 }
 
 .sidebar-container {
@@ -106,6 +107,12 @@
   height: 80%;
 }
 
+.video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .gift-bar {
   gap: 32px;
   width: 98%;
@@ -139,6 +146,7 @@
   align-items: center;
   justify-content: center;
   transition: 0.5s ease-in-out;
+  /* flex-shrink: 0; */
 }
 
 .chatbar-content {
@@ -166,6 +174,8 @@
   margin-bottom: 15px;
   height: 80%;
   overflow-y: auto;
+  max-width: 350px;
+  width: 100%;
   /* outline: 1px solid #fff; */
 }
 
@@ -176,12 +186,15 @@
   width: 1px;
 }
 
+.chat-name {
+  flex-shrink: 0;
+}
+
 .comment-chat {
   display: flex;
-  flex-direction: row;
   gap: 6px;
-  flex-wrap: wrap;
   margin-bottom: 6px;
+  flex-wrap: wrap;
 }
 
 .comment-bar {
@@ -209,6 +222,7 @@
   right: 10px;
   top: 10px;
   font-size: 16px;
+  z-index: 99;
 }
 
 .hidden_left {
@@ -255,6 +269,7 @@
 }
 
 .icon_reply {
+  margin-top: 6px;
   height: 16px;
   /* outline: 1px solid white; */
 }
@@ -348,6 +363,13 @@
   .member-list {
     z-index: 500;
     overflow-y: auto;
+    height: 250px;
+  }
+
+  .streaming-content {
+    /* outline: 1px solid white; */
+    height: 30%;
+    aspect-ratio: 16/9;
   }
 
 }
