--- a/ruins-next/styles/globals.css
+++ b/ruins-next/styles/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 :root {
-  --main-bg: #292929;
+  /* --main-bg: #292929; */
 }
 
 * {
@@ -18,7 +18,7 @@
 }
 
 body {
-  background-color: var(--main-bg);
+  /* background-color: var(--main-bg); */
   font-family: "IBM Plex Mono", monospace;
   width: 100%;
   /* overflow-x: hidden; */
