--- a/ruins-next/styles/globals.css
+++ b/ruins-next/styles/globals.css
@@ -19,7 +19,7 @@
 
 body {
   background-color: var(--main-bg);
-  font-family: "IBM Plex Mono", monospace;
+  font-family: 'IBM Plex Mono', monospace;
   width: 100%;
   /* overflow-x: hidden; */
   line-height: normal;
@@ -32,7 +32,7 @@ input:-webkit-autofill,
 input:-webkit-autofill:hover,
 input:-webkit-autofill:focus,
 input:-webkit-autofill:active {
-  transition: all 0s 50000s; 
+  transition: all 0s 50000s;
 }
 
 /* johnny  start*/
