更新聊天室

--- a/ruins-next/styles/insert-live-details.module.css
+++ b/ruins-next/styles/insert-live-details.module.css
@@ -15,6 +15,7 @@
   width: 26%;
   text-align: center;
   font-size: 30px;
+  margin-top: 18px;
 }
 
 /* 右欄 */
@@ -45,8 +46,9 @@
   height: 95%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
+
 }
 
 .first-block, .second-block {
@@ -59,7 +61,8 @@
 }
 
 .first-block{
-  height: 30%;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .title-text{
