--- a/ruins-next/components/tyler/left_memberList/memberList.module.css
+++ b/ruins-next/components/tyler/left_memberList/memberList.module.css
@@ -34,6 +34,7 @@
 
 .member-list {
   overflow-y: auto;
+  margin-top: 14px;
 }
 
 .member-list::-webkit-scrollbar {
@@ -74,10 +75,10 @@
   .sidebar {
     position: absolute;
     width: 100%;
+    height: 100%;
     top: 35%;
     background-color: #292929;
     display: flex;
-    outline: 1px solid white;
   }
 
   .sidebar-container {
