--- a/ruins-next/styles/check-webcam-source.module.css
+++ b/ruins-next/styles/check-webcam-source.module.css
@@ -46,6 +46,7 @@
   width: 26%;
   text-align: center;
   font-size: 30px;
+  margin-top: 18px;
 }
 
 .source {
@@ -61,8 +62,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  /* outline: 1px solid #FFF; */
   position: relative;
+  margin-top: 10px
 }
 
 .button {
@@ -72,6 +73,7 @@
   text-align: center;
   font-weight: 600;
   margin-top: 10px;
+  font-size: 20px;
 }
 
 .icon-box {
@@ -120,10 +122,8 @@
     margin-bottom: 10px;
   }
 
-  .button {
-    font-size: 14px;
-    position: absolute;
-    bottom: 55px
+  .bottom-part{
+    margin-top: 10px;
   }
 
 }
