--- a/ruins-next/components/linda/homeContent/homeContent.module.css
+++ b/ruins-next/components/linda/homeContent/homeContent.module.css
@@ -48,17 +48,20 @@
 
 .slide-in-from-right {
   animation: slideInFromRight 0.5s ease-out forwards;
+  opacity: 0;
+  transform: translateX(30%); 
 }
 
 .slide-in-from-left {
   animation: slideInFromLeft 0.5s ease-out forwards;
+  opacity: 0; 
+  transform: translateX(-30%); 
 }
 
 .sec3-text {
   display: flex;
   flex-direction: column;
   gap: 6px;
-  align-self: stretch;
   color: white;
 }
 
@@ -113,7 +116,7 @@ p.item-name {
   position: absolute;
   /* left: 193px;
   bottom: 250px; */
-  bottom: 180px;
+  bottom: 35%;
   left: -600px;
   max-width: 350px;
   padding: 30px 24px 60px 24px;
@@ -244,7 +247,7 @@ p.item-name {
   }
 
   .card2 {
-    padding: 20px 0px 18px 19px;
+    padding: 18px;
     left: 17px;
     bottom: 35%;
     gap: 30px;
@@ -258,6 +261,7 @@ p.item-name {
   .homeSectionThree {
     display: flex;
     padding: 40px 0px;
+    padding-bottom: 120px;
     flex-direction: column;
     align-items: center;
     gap: 35px;
@@ -276,7 +280,6 @@ p.item-name {
     display: flex;
     flex-direction: column;
     gap: 6px;
-    align-self: stretch;
   }
 
   .sec3-img-container {
@@ -285,7 +288,6 @@ p.item-name {
   }
 
   .sec3TextContainer {
-    width: 100%;
     order: 1;
     display: flex;
     gap: 6px;
