修訂 1. 聊天室視覺會被擠壓 2. 回覆訊息顯示對象錯誤

--- a/ruins-next/components/tyler/right_chatroom/chatRoom.module.css
+++ b/ruins-next/components/tyler/right_chatroom/chatRoom.module.css
@@ -95,8 +95,9 @@
   .chatbar {
     /* outline: 1px solid white; */
     width: 100%;
-    height: 100%;
+    height: 60%;
     background-color: #292929;
+    flex: shrink 0;
   }
 
   .chat {
