--- a/ruins-next/pages/community/central-personal.module.css
+++ b/ruins-next/pages/community/central-personal.module.css
@@ -32,7 +32,8 @@
   display: block;
   transition: 0.5s;
   position: absolute;
-  background: #adadaf;
+  /* background: #adadaf; */
+  background: #fff;
   content: attr(data-back);
   transform: translateY(-50%) rotateX(90deg);
 }
@@ -42,7 +43,8 @@
   top: 0;
   left: 0;
   opacity: 1;
-  color: #adadaf;
+  /* color: #adadaf; */
+  color: #fff;
   display: block;
   padding: 0 30px;
   line-height: 40px;
